[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/SceneContainer.gd" type="Script" id=1]
[ext_resource path="res://scenes/Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/dogica/dogica.tres" type="Theme" id=3]
[ext_resource path="res://assets/art/enemies/creatures/creatures edit_0_transparent.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 928, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 928, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 928, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 544, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 544, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 544, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "two",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "three",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "one",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "four",
"speed": 5.0
} ]

[node name="SceneContainer" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxingBackdrop" type="ColorRect" parent="."]
margin_left = 2.37842
margin_right = 6002.38
margin_bottom = 4000.0
color = Color( 0.305882, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
pause_mode = 1
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Main" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]
pause_mode = 0

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Backdrop"]

[node name="Loading" type="Popup" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayInTimer" type="Timer" parent="Loading"]
wait_time = 2.0
one_shot = true

[node name="DelayOutTimer" type="Timer" parent="Loading"]
wait_time = 2.0
one_shot = true

[node name="SpriteContainer" type="CenterContainer" parent="Loading"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -437.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Loading/SpriteContainer"]
position = Vector2( 210.986, -41.8346 )
frames = SubResource( 13 )
animation = "four"

[node name="CenterContainer" type="CenterContainer" parent="Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.245
margin_top = -1.1225
margin_right = 2.245
margin_bottom = -1.12256
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Loading/CenterContainer"]
margin_left = 741.0
margin_top = 479.0
margin_right = 1178.0
margin_bottom = 600.0
custom_constants/separation = 32

[node name="Label" type="Label" parent="Loading/CenterContainer/VBoxContainer"]
margin_right = 437.0
margin_bottom = 19.0
theme = ExtResource( 3 )
text = "Loading..."
align = 1
valign = 1

[node name="LevelLabel" type="Label" parent="Loading/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 437.0
margin_bottom = 70.0
theme = ExtResource( 3 )
text = "Level 10: The Abyss"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Loading/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 437.0
margin_bottom = 121.0
theme = ExtResource( 3 )
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.01
[connection signal="timeout" from="Loading/DelayInTimer" to="." method="_on_Loading_DelayInTimer_timeout"]
[connection signal="timeout" from="Loading/DelayOutTimer" to="." method="_on_Loading_DelayOutTimer_timeout"]
